--- a/Pang.vcxproj
+++ b/Pang.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Peon.cpp" />
     <ClCompile Include="src\Tablero.cpp" />
     <ClCompile Include="src\Pang.cpp" />
     <ClCompile Include="src\Pieza.cpp" />
